...
        put("pinterest", Entry("com.pinterest", "Pinterest"))

        // --- Google ---
        put("com.google.Gmail", Entry("com.google.android.gm", "Gmail"))
        put("com.google.Maps", Entry("com.google.android.apps.maps", "Google Maps"))
        put("com.google.ios.youtube", Entry("com.google.android.youtube", "YouTube"))
        put("com.google.chrome.ios", Entry("com.android.chrome", "Chrome"))
        put("com.google.calendar", Entry("com.google.android.calendar", "Google Calendar"))
        put("com.google.Drive", Entry("com.google.android.apps.docs", "Google Drive"))
        put("com.google.hangouts", Entry("com.google.android.apps.tachyon", "Google Meet"))
        put("com.google.photos", Entry("com.google.android.apps.photos", "Google Photos"))

        // --- Microsoft ---
...
